# data-project-manager

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  GETTING_STARTED.md  Makefile  README.md  pyproject.toml
docs/: ARCHITECTURE.md  FOLDER-SELECTION-DESIGN.md  PLAN.md  TECH_STACK.md  conf.py  index.rst
docs/api/: cli.rst  config.rst  core.rst  db.rst
docs/usage/: cli.rst  faq.rst  library.rst  quickstart.rst  templates.rst
src/data_project_manager/: __init__.py  __main__.py
src/data_project_manager/cli/: __init__.py  app.py  fallback.py
src/data_project_manager/config/: __init__.py  defaults.py  loader.py
src/data_project_manager/core/: __init__.py  export.py  project.py  search.py  templates.py
src/data_project_manager/db/: __init__.py  connection.py  schema.py
src/data_project_manager/db/models/: __init__.py  changelog.py  data_file.py  deliverable.py  person.py  project.py  project_root.py  query.py  question.py  search.py  tag.py
src/data_project_manager/db/repositories/: __init__.py  _helpers.py  changelog.py  data_file.py  deliverable.py  person.py  project.py  query.py  question.py  tag.py
tests/: conftest.py  helpers.py  test_changelog.py  test_cli.py  test_cli_entry.py  test_cli_export.py  test_cli_fallback_extended.py  test_cli_project_update_info.py  test_cli_search.py  test_cli_typer.py  test_config.py  test_config_loader.py  test_core_project.py  test_db.py  test_export.py  test_project_edge_cases.py  test_repositories_data.py  test_repositories_people_tags.py  test_search.py
