[project]
name = "data-project-manager"
version = "1.1.2"
description = "A project launcher and metadata database for analytical work"
readme = "README.md"
authors = [
    { name = "wiskas1000", email = "14247817+wiskas1000@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
enhanced = [
    "typer",
]

[project.scripts]
datapm = "data_project_manager.cli:main"

[build-system]
requires = ["uv_build>=0.11.1,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.9",
    "sphinx>=9.0.4",
    "sphinx-autodoc-typehints>=3.6.1",
]
